--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,4 @@
-.form input[type='text'], input[type='password'] {
+.input[type='text'], input[type='password'] {
 	color: #aeaeae;
 	font-size: 13px;
 	height: 33px;
@@ -8,7 +8,7 @@
 	margin: 0 0 6px;
 	padding: 0 4px;
 }
-.form input[type='submit'] {
+.input[type='submit'] {
 	float: right;
 	background-color: #818181;
 	color: #d5d5d5;
@@ -18,4 +18,7 @@
 	border: 0;
 	margin: 0;
 	padding: 0 10px;
+}
+.td {
+	text-align: right;
 }
