--- a/css/form.css
+++ b/css/form.css
@@ -1,14 +1,156 @@
-input[type='submit'] {
-	float: right;
-	background-color: #818181;
-	color: #d5d5d5;
-	cursor: pointer;
-	font: 13px/30px Arial, Helvetica, sans-serif;
-	height: 30px;
-	border: 0;
-	margin: 0;
-	padding: 0 10px;
+/*
+Registration/Login Form by html-form-guide.com
+You can customize all the aspects of the form in this style sheet
+*/
+
+#content fieldset
+{
+   width: 230px;
+   padding:20px;
+   border:1px solid #ccc;
+-moz-border-radius: 10px;
+-webkit-border-radius: 10px;
+-khtml-border-radius: 10px;
+border-radius: 10px;   
 }
-td {
-	text-align: right;
+
+#content legend, #content h2
+{
+   font-family : Arial, sans-serif;
+   font-size: 1.3em;
+   font-weight:bold;
+   color:#333;
+}
+
+#content label
+{
+   font-family : Arial, sans-serif;
+   font-size:0.8em;
+   font-weight: bold;
+}
+
+#content input[type="text"],#content textarea,
+#content input[type="password"]
+{
+  font-family : Arial, Verdana, sans-serif;
+  font-size: 0.8em;
+  line-height:140%;
+  color : #000; 
+  padding : 3px; 
+  border : 1px solid #999;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
+
+}
+
+#content input[type="text"],
+#content input[type="password"]
+{
+  height:18px;
+  width:220px;
+}
+
+ #content #scaptcha
+{
+  width:60px;
+  height:18px;
+}
+
+#content input[type="submit"]
+{
+   width:100px;
+   height:30px;
+   padding-left:0px;
+}
+
+#content textarea
+{
+  height:120px;
+  width:310px;
+}
+
+#content input[type="text"]:focus,
+#content textarea:focus
+{
+  color : #009;
+  border : 1px solid #990000;
+  background-color : #ffff99;
+  font-weight:bold;
+}
+
+#content .container
+{
+   margin-top:8px;
+   margin-bottom: 10px;
+}
+
+#content .error
+{
+   font-family: Verdana, Arial, sans-serif; 
+   font-size: 0.7em;
+   color: #900;
+   background-color : #ffff00;
+}
+
+#content #register_password_errorloc
+{
+    clear:both;
+}
+
+#content  fieldset#antispam
+{
+   padding:2px;
+   border-top:1px solid #EEE;
+   border-left:0;
+   border-right:0;
+   border-bottom:0;
+   width:350px;
+}
+
+#content fieldset#antispam legend
+{
+   font-family : Arial, sans-serif;
+   font-size: 0.8em;
+   font-weight:bold;
+   color:#333;   
+}
+
+#content .short_explanation
+{
+   font-family : Arial, sans-serif;
+   font-size: 0.6em;
+   color:#333;   
+}
+
+/* spam_trap: This input is hidden. This is here to trick the spam bots*/
+#content .spmhidip
+{
+   display:none;
+   width:10px;
+   height:3px;
+}
+#content #fg_crdiv
+{
+   font-family : Arial, sans-serif;
+   font-size: 0.3em;
+   opacity: .2;
+   -moz-opacity: .2;
+   filter: alpha(opacity=20);   
+}
+#content  #fg_crdiv p
+{
+    display:none;
+}
+
+body {
+	margin: 0px;	
+	padding: 0px;
+}
+
+div#content {
+	width: 350px; 
+	border: 0px;
+	margin: 0 auto;
 }
